# YOLO-NCNN-Deployment-Guide

./: CMakeLists.txt  README.md  yolov7.cpp
src/: yolov5.cpp
